--- a/package.json
+++ b/package.json
@@ -1,50 +1,56 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.15.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.37",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
-    "bootstrap": "^5.1.3",
-    "node-sass": "^6.0.1",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.0.2",
-    "react-bootstrap-icons": "^1.6.1",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "react-select": "^5.2.1",
-    "react-transition-group": "^4.4.2",
-    "react-tsparticles": "^1.39.0",
-    "typescript": "^4.5.2",
-    "web-vitals": "^1.1.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "my-app",
+	"version": "0.1.0",
+	"homepage": "https://jonathanbridges.github.io/amigo-invisible",
+	"private": true,
+	"dependencies": {
+		"@testing-library/jest-dom": "^5.15.1",
+		"@testing-library/react": "^11.2.7",
+		"@testing-library/user-event": "^12.8.3",
+		"@types/jest": "^26.0.24",
+		"@types/node": "^12.20.37",
+		"@types/react": "^17.0.37",
+		"@types/react-dom": "^17.0.11",
+		"bootstrap": "^5.1.3",
+		"node-sass": "^6.0.1",
+		"react": "^17.0.2",
+		"react-bootstrap": "^2.0.2",
+		"react-bootstrap-icons": "^1.6.1",
+		"react-dom": "^17.0.2",
+		"react-scripts": "4.0.3",
+		"react-select": "^5.2.1",
+		"react-transition-group": "^4.4.2",
+		"react-tsparticles": "^1.39.0",
+		"typescript": "^4.5.2",
+		"web-vitals": "^1.1.2"
+	},
+	"scripts": {
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"gh-pages": "^3.2.3"
+	}
 }
