--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "my-app",
 	"version": "0.1.0",
-	"homepage": "https://jonathanbridges.github.io/amigo-invisible",
+	"homepage": "https://jonathanbridges.github.io/amigo-invisible/",
 	"private": true,
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.15.1",
